implemented GET for "sent" box. added style for emails in list. added spinner/loader.

--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -30,6 +30,9 @@
             <input type="submit" class="btn btn-primary"/>
         </form>
     </div>
+
+    <div class="loader" id="loader">Loading...</div>
+
 {% endblock %}
 
 {% block script %}
