odering of mails in inboxes now okay, added another div "divider". added new favicon.

--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -1,6 +1,9 @@
 textarea {
     min-height: 400px;
 }
+.divider {
+    margin-top: 2em;
+}
 .email {
     background-color: white;
     border: 1px solid blue;
