--- a/mail/templates/mail/layout.html
+++ b/mail/templates/mail/layout.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'mail/styles.css' %}">
-        <link rel="shortcut icon" href="{% static 'mail/favicon.ico' %}">
+        <link rel="shortcut icon" href="{% static 'mail/mail.png' %}">
         {% block script %}
         {% endblock %}
     </head>
