--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -14,6 +14,9 @@
     <div id="emails-view">
     </div>
 
+    <div id="detail-view">
+    </div>
+
     <div id="compose-view">
         <h3>New Email</h3>
         <form id="compose-form" onsubmit="return false">
